[package]
name = "o9"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }

rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.133" }
lazy_static = "1.5.0"

[build-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
convert_case = "0.8.0"
